--- a/style.css
+++ b/style.css
@@ -159,4 +159,48 @@
   #contact {
     margin-top: 40px;
   }
-  
+ 
+  @media (max-width: 576px){
+  .information h1{
+    font-size:34px;
+    line-height: 1.5;
+  } 
+  .information h2{
+    font-size: 30px;
+    line-height: 1.5;
+  }
+  .container .col-sm-4{
+    margin-top: 20px;
+  }
+  .contact{
+    font-size: 26px;
+  }
+  .img-page{
+    display: none;
+  }
+  p{
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+    margin-top: 20px;
+   
+  }
+  div.container{
+    
+    font-size: 16px;
+    min-width: 90%;
+    min-height: 90%;
+    margin-left: 20px;
+    margin-right: 20px;
+    
+  }
+  .mt-5{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .primary-link{
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
+}
