--- a/style.css
+++ b/style.css
@@ -141,11 +141,12 @@
     text-align: left;
   }
   p {
-    font-size: 18px;
+    font-size: 26px;
     line-height: 1.5;
     display: block;
     background-color: white;
-    text-align: start;
+    text-align: center;
+    height: fit-content;
   }
   .mt-5 {
     display: block;
