--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@
   }
   .row {
     display: flex;
-  
     justify-content: center;
   }
   .container {
@@ -156,6 +155,10 @@
   }
   .contact {
     font-size: 48px;
+  }
+  h2.mb-3{
+    font-size: 36px;
+    margin-top: 30px;
   }
   #contact {
     margin-top: 40px;
