--- a/style.css
+++ b/style.css
@@ -183,11 +183,11 @@
     display: none;
   }
   p{
-    text-align: center;
+
     box-sizing: border-box;
     padding: 0;
     margin-top: 20px;
-   
+   text-align: justify;
   }
   div.container{
     
