--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@
     color: var(--primary-color);
     font-size: 28px;
     text-decoration: none;
+    margin-bottom: 20px;
   }
   
   .email-link:hover {
@@ -187,7 +188,10 @@
     box-sizing: border-box;
     padding: 0;
     margin-top: 20px;
-   text-align: justify;
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+   
   }
   div.container{
     
@@ -197,6 +201,11 @@
     margin-left: 20px;
     margin-right: 20px;
     
+  }
+  div.about-paragraphs{
+    margin-left: 20px;
+    margin-right: 20px;
+
   }
   .mt-5{
     margin-top: 20px;
